--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Contact</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="client">Client</string>
+    <string name="enter">Enter</string>
 </resources>
